# Fellow-Espresso-Series1-HomeAssistant

./: AGENTS.md  LICENSE  PROTOCOL.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/: __init__.py
custom_components/fellow_series1/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  models.py  sensor.py  strings.json
custom_components/fellow_series1/translations/: en.json
scripts/: check_ha_imports.py  validate.py
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_models.py
tests/fixtures/: device.json  profiles.json
